--- a/projeto-taina-raio/src/styles/pages/sobre.module.css
+++ b/projeto-taina-raio/src/styles/pages/sobre.module.css
@@ -55,6 +55,12 @@
 
 }
 
+.legenda{
+opacity: 0;
+font-size: 20px;
+ 
+}
+
 /* Estilos para telas Pequenas (até 640px de largura) */
 @media screen and (max-width: 640px) {
   .taiImage {
